# cargo-doc-gen

./: Cargo.toml  LICENSE  README.md
.github/workflows/: lint.yml  test.yml
src/: main.rs
src/ast/: mod.rs
src/check/: mod.rs
src/cli/: mod.rs
src/doc_config/: mod.rs
src/doc_gen/: mod.rs
src/doc_inserter/: mod.rs
src/doc_parser/: mod.rs
src/doc_tree/: mod.rs
