[package]
name = "cargo-doc-gen"
version = "0.1.0"
authors = ["Erik Nordin <nordzillacode@gmail.com>", "Caleb Boylan <calebboylan@gmail.com>", "Connor Kuehl <cipkuehl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
